Revert "fix : add padding bottom only when playground button is visible"
This reverts commit 492c3c152e69018ed2969dc11a3495ae266859ef.

--- a/packages/website/src/theme/CodeBlock/Content/styles.module.css
+++ b/packages/website/src/theme/CodeBlock/Content/styles.module.css
@@ -46,11 +46,6 @@
   padding: var(--ifm-pre-padding);
 }
 
-.codeBlockLinesWithPlaygroundButton {
-  padding: var(--ifm-pre-padding) var(--ifm-pre-padding)
-    calc(var(--ifm-pre-padding) * 2.5);
-}
-
 .codeBlockLinesWithNumbering {
   display: table;
   padding: var(--ifm-pre-padding) 0;
@@ -107,9 +102,5 @@
   .playgroundButton {
     position: static;
     margin: calc(var(--ifm-pre-padding) / 2);
-  }
-
-  .codeBlockLinesWithPlaygroundButton {
-    padding: var(--ifm-pre-padding);
   }
 }
